fix overflow issue on mobile screens

--- a/countdowntimer/styles.css
+++ b/countdowntimer/styles.css
@@ -12,6 +12,7 @@ body {
   margin: 0;
   text-align: center;
   font-family: 'Inconsolata', monospace;
+  max-height: 100vh;
 }
 
 .display__time-left {
